--- a/index.html
+++ b/index.html
@@ -44,28 +44,29 @@
         <p class="hero-guarantee-banner">+1 GRADE IN 3 MONTHS GUARANTEED*</p>
         <p class="hero-sub">No guesswork: 5 performance indicators ensure visible results.</p>
         <div class="trust-hook">4×A* | Imperial College Computing (AI) | Top 100 UK by CS A Level</div>
-        <figure class="hero-testimonial">
-          <img class="hero-testimonial__media" src="/assets/philipp.png" alt="Natalie — delighted parent" width="112" height="112" loading="lazy">
-          <figcaption class="hero-testimonial__content">
-            <p class="hero-testimonial__name">Natalie — envied by neighbours for her son's results</p>
-            <blockquote class="hero-testimonial__quote">“…My son easily understands and absorbs information thanks to Philipp’s ability to explain complex topics clearly.”</blockquote>
-          </figcaption>
-        </figure>
-
         <div class="cta-ensemble">
-          <div class="cta">
-            <a class="btn-primary" data-consult-link href="https://calendly.com/philippmathsphysics/consult-free-diagnostic" target="_blank" rel="noopener" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
-            <div class="cta-sub">No charge • 20 min</div>
+          <div class="testimonial-cta">
+            <figure class="hero-testimonial">
+              <img class="hero-testimonial__media" src="/assets/natalie-160.png" alt="Natalie — delighted parent" width="112" height="112" loading="lazy">
+              <figcaption class="hero-testimonial__content">
+                <p class="hero-testimonial__name">Natalie — envied by neighbours for her son's results</p>
+                <blockquote class="hero-testimonial__quote">“…My son easily understands and absorbs information thanks to Philipp’s ability to explain complex topics clearly.”</blockquote>
+              </figcaption>
+            </figure>
+
+            <div class="cta">
+              <a class="btn-primary" data-consult-link href="https://calendly.com/philippmathsphysics/consult-free-diagnostic" target="_blank" rel="noopener" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
+              <div class="cta-sub">No charge • 20 min</div>
+            </div>
           </div>
 
           <aside class="cta-offer" aria-label="Special offer countdown">
-            <div class="cta-offer__timer">
-              <span class="cta-offer__timer-label">Offer ends in</span>
+            <div class="cta-offer__timer" role="status" aria-live="polite">
               <span class="cta-offer__countdown" data-offer-countdown>24:00:00</span>
             </div>
             <div class="cta-offer__body">
               <p class="cta-offer__eyebrow">SPECIAL OFFER</p>
-              <p class="cta-offer__copy">BOOK FREE CONSULT TODAY TO GET THE £50 DIAGNOSTIC FOR FREE. NO CREDIT CARD.</p>
+              <p class="cta-offer__copy">BOOK FREE CONSULT TODAY TO GET THE £50 DIAGNOSTIC FOR FREE. NO CREDIT CARD REQUIRED.</p>
             </div>
             <span class="cta-offer__arrow" aria-hidden="true"></span>
           </aside>
