--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <figure class="hero-testimonial">
               <img class="hero-testimonial__media" src="/assets/natalie-160.png" alt="Natalie — delighted parent" width="112" height="112" loading="lazy">
               <figcaption class="hero-testimonial__content">
-                <p class="hero-testimonial__name">Natalie — envied by neighbours for her son's results</p>
+                <p class="hero-testimonial__name">Natalie — envied by neighbours for son's results</p>
                 <blockquote class="hero-testimonial__quote">“…My son easily understands and absorbs information thanks to Philipp’s ability to explain complex topics clearly.”</blockquote>
               </figcaption>
             </figure>
@@ -65,7 +65,7 @@
               <span class="cta-offer__countdown" data-offer-countdown>24:00:00</span>
             </div>
             <div class="cta-offer__body">
-              <p class="cta-offer__eyebrow">SPECIAL OFFER</p>
+              <p class="cta-offer__eyebrow">SPECIAL OFFER – SAVE £50</p>
               <p class="cta-offer__copy">BOOK FREE CONSULT TODAY TO GET THE £50 DIAGNOSTIC FOR FREE. NO CREDIT CARD REQUIRED.</p>
             </div>
             <span class="cta-offer__arrow" aria-hidden="true"></span>
