--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="hero-left">
         <p class="track-overline">CS Prime Academy — serious tuition for serious results.</p>
         <h2 class="hero-title">The Breakthrough Programme<br>A Level Computer Science,<br>taught for <span class="u-underline">results</span>.</h2>
-        <p class="hero-guarantee-banner">+1 GRADE IN 3 MONTHS GUARANTEED*</p>
+        <p class="hero-guarantee-banner">GUARANTEE +1 GRADE IN 3 MONTHS*</p>
         <p class="hero-sub">No guesswork: 5 performance indicators ensure visible results.</p>
         <div class="trust-hook">4×A* | Imperial College Computing (AI) | Top 100 UK by CS A Level</div>
         <div class="cta-ensemble">
@@ -75,12 +75,22 @@
       </div>
 
       <div class="hero-right">
-        <picture>
-          <!-- <source type="image/avif" srcset="/assets/philipp-800.avif 800w, /assets/philipp-1200.avif 1200w, /assets/philipp-1800.avif 1800w" sizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)"> -->
-          <!--<source type="image/webp" srcset="/assets/philipp-800.webp 800w, /assets/philipp-1200.webp 1200w, /assets/philipp-1800.webp 1800w" sizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)"> -->
-          <!--<img src="/assets/philipp-1200.webp" alt="Philipp Bogdan" width="1200" height="1600" loading="eager" fetchpriority="high"> -->
-          <img src="/assets/philipp.png" alt="Philipp Bogdan" width="1200" height="1600" loading="eager" fetchpriority="high">
-        </picture>
+        <div class="hero-capacity" role="status" aria-live="polite">
+          <span class="hero-capacity__label">4/4 places remaining. applications close after we fill.</span>
+          <div class="hero-capacity__bar" role="progressbar" aria-valuemin="0" aria-valuemax="4" aria-valuenow="0" aria-valuetext="4 of 4 places remaining">
+            <span class="hero-capacity__bar-fill" aria-hidden="true"></span>
+          </div>
+        </div>
+
+        <figure class="hero-portrait">
+          <picture>
+            <!-- <source type="image/avif" srcset="/assets/philipp-800.avif 800w, /assets/philipp-1200.avif 1200w, /assets/philipp-1800.avif 1800w" sizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)"> -->
+            <!--<source type="image/webp" srcset="/assets/philipp-800.webp 800w, /assets/philipp-1200.webp 1200w, /assets/philipp-1800.webp 1800w" sizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)"> -->
+            <!--<img src="/assets/philipp-1200.webp" alt="Philipp Bogdan" width="1200" height="1600" loading="eager" fetchpriority="high"> -->
+            <img src="/assets/philipp.png" alt="Philipp Bogdan" width="1200" height="1600" loading="eager" fetchpriority="high">
+          </picture>
+          <figcaption class="hero-portrait__caption">Philipp – Reach Your Prime</figcaption>
+        </figure>
       </div>
     </div>
 
