--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
       </div>
 
       <div class="hero-right">
-        <div class="hero-capacity" role="status" aria-live="polite">
-          <span class="hero-capacity__label">4/4 places remaining. applications close after we fill.</span>
-          <div class="hero-capacity__bar" role="progressbar" aria-valuemin="0" aria-valuemax="4" aria-valuenow="0" aria-valuetext="4 of 4 places remaining">
-            <span class="hero-capacity__bar-fill" aria-hidden="true"></span>
+        <div class="capacity-indicator" role="status" aria-live="polite">
+          <div class="capacity-indicator__bar" aria-hidden="true">
+            <span class="capacity-indicator__fill"></span>
           </div>
+          <p class="capacity-indicator__caption">4/4 Places remaining. Applications close after we fill.</p>
         </div>
 
         <figure class="hero-portrait">
