--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
       </div>
 
       <div class="hero-right">
-        <div class="capacity-indicator" role="status" aria-live="polite">
-          <div class="capacity-indicator__bar" aria-hidden="true">
-            <span class="capacity-indicator__fill"></span>
+        <div class="hero-availability" aria-live="polite">
+          <div class="hero-availability__bar" role="progressbar" aria-valuemin="0" aria-valuemax="4" aria-valuenow="0" aria-valuetext="0 of 4 places filled">
+            <span class="hero-availability__fill" aria-hidden="true"></span>
           </div>
-          <p class="capacity-indicator__caption">4/4 Places remaining. Applications close after we fill.</p>
+          <p class="hero-availability__caption">4/4 places remaining. applications close after we fill.</p>
         </div>
 
         <figure class="hero-portrait">
