moving the whole copy up

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
             <div class="cta-offer__body">
               <p class="cta-offer__eyebrow">SPECIAL OFFER – SAVE £50</p>
-              <p class="cta-offer__copy">BOOK FREE CONSULT TODAY TO GET THE £50 DIAGNOSTIC FOR FREE. NO CREDIT CARD REQUIRED.</p>
+              <p class="cta-offer__copy">Book a free consult today to get the £50 diagnostic at no cost. No credit card required.</p>
             </div>
             <span class="cta-offer__arrow" aria-hidden="true"></span>
           </aside>
