--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="hero-left">
         <p class="track-overline">CS Prime Academy — serious tuition for serious results.</p>
         <h2 class="hero-title">The Breakthrough Programme<br>A Level Computer Science,<br>taught for <span class="u-underline">results</span>.</h2>
-        <p class="hero-guarantee-banner">GUARANTEE +1 GRADE IN 3 MONTHS*</p>
+        <p class="hero-guarantee-banner">GUARANTEE +1 GRADE IN 3 MONTHS* (never before)</p>
         <p class="hero-sub">No guesswork: 5 performance indicators ensure visible results.</p>
         <div class="trust-hook">4×A* | Imperial College Computing (AI) | Top 100 UK by CS A Level</div>
         <div class="cta-ensemble">
@@ -71,15 +71,15 @@
             <span class="cta-offer__arrow" aria-hidden="true"></span>
           </aside>
         </div>
-        <p class="hero-footnote">* – If you do everything as I tell you, but in 3 months the grade hasn’t improved, I will slave working for FREE until we achieve that grade and refund ALL the money you paid for the last 3 months.</p>
       </div>
 
       <div class="hero-right">
         <div class="hero-availability" aria-live="polite">
+          <p class="hero-availability__label">FOUR SEATS ONLY</p>
           <div class="hero-availability__bar" role="progressbar" aria-valuemin="0" aria-valuemax="4" aria-valuenow="0" aria-valuetext="0 of 4 places filled">
             <span class="hero-availability__fill" aria-hidden="true"></span>
           </div>
-          <p class="hero-availability__caption">4/4 places remaining. applications close after we fill.</p>
+          <p class="hero-availability__caption">4 places remaining. applications close after we fill.</p>
         </div>
 
         <figure class="hero-portrait">
