--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="hero-left">
         <p class="track-overline">CS Prime Academy — serious tuition for serious results.</p>
         <h2 class="hero-title">The Breakthrough Programme<br>A Level Computer Science,<br>taught for <span class="u-underline">results</span>.</h2>
-        <p class="hero-guarantee-banner">GUARANTEE +1 GRADE IN 3 MONTHS* (never before)</p>
+        <p class="hero-guarantee-banner">GUARANTEE +1 GRADE IN 3 MONTHS* <span class="hero-guarantee-banner__note">(never before)</span></p>
         <p class="hero-sub">No guesswork: 5 performance indicators ensure visible results.</p>
         <div class="trust-hook">4×A* | Imperial College Computing (AI) | Top 100 UK by CS A Level</div>
         <div class="cta-ensemble">
