--- a/index.html
+++ b/index.html
@@ -55,18 +55,22 @@
             </figure>
 
             <div class="cta">
-              <a class="btn-primary" data-consult-link href="https://calendly.com/philippmathsphysics/consult-free-diagnostic" target="_blank" rel="noopener" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
+              <a class="btn-primary" data-consult-link href="https://calendly.com/csprime/consult-free-diagnostic" target="_blank" rel="noopener" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
               <div class="cta-sub">No charge • 20 min</div>
             </div>
           </div>
 
-          <aside class="cta-offer" aria-label="Special offer countdown">
-            <div class="cta-offer__timer" role="status" aria-live="polite">
-              <span class="cta-offer__countdown" data-offer-countdown>24:00:00</span>
-            </div>
+          <aside class="cta-offer" aria-label="Special offer details">
             <div class="cta-offer__body">
               <p class="cta-offer__eyebrow">SPECIAL OFFER – SAVE £50</p>
-              <p class="cta-offer__copy">Book a free consult today to get the £50 diagnostic at no cost. No credit card required.</p>
+              <p class="cta-offer__copy">Book your consult today to get the £50 diagnostic for FREE. No credit card required.</p>
+            </div>
+            <div class="cta-offer__timer" aria-hidden="true"></div>
+          </aside>
+
+          <aside class="cta-offer-floating" aria-label="Special offer countdown">
+            <div class="cta-offer__timer" role="status" aria-live="polite">
+              <span class="cta-offer__countdown" data-offer-countdown>24:00:00</span>
             </div>
             <span class="cta-offer__arrow" aria-hidden="true"></span>
           </aside>
