--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <aside class="cta-offer" aria-label="Special offer details">
             <div class="cta-offer__body">
               <p class="cta-offer__eyebrow">SPECIAL OFFER – SAVE £50</p>
-              <p class="cta-offer__copy">Book your consult today to get the £50 diagnostic for FREE. No credit card required.</p>
+              <p class="cta-offer__copy">Book your consult within 24hrs to get the £50 diagnostic for FREE. No credit card required.</p>
             </div>
             <div class="cta-offer__timer" aria-hidden="true"></div>
           </aside>
