--- a/index.html
+++ b/index.html
@@ -40,11 +40,15 @@
   <section class="hero hero--specialist" role="banner">
     <div class="hero-inner">
       <div class="hero-left">
-        <p class="track-overline"><span class="track-overline__brand">CS Prime Academy</span> — serious tuition for serious results.</p>
+        <p class="track-overline">CS Prime Academy — serious tuition for serious results.</p>
         <h2 class="hero-title">The Breakthrough Programme<br>A Level Computer Science,<br>taught for <span class="u-underline">results</span>.</h2>
-        <p class="hero-guarantee-banner">GUARANTEE +1 GRADE IN 3 MONTHS* <span class="hero-guarantee-banner__note">(never before)</span></p>
-        <p class="hero-sub">No guesswork: 5 performance indicators ensure visible results.</p>
-        <div class="trust-hook">4×A* | Imperial College Computing (AI) | Top 100 UK by CS A Level</div>
+        <ul class="hero-proof-list">
+          <li class="hero-proof-item">
+            <span class="hero-guarantee-banner">GUARANTEE +1 GRADE IN 3 MONTHS* <span class="hero-guarantee-banner__note">(never before)</span></span>
+          </li>
+          <li class="hero-proof-item"><span class="hero-sub">No guesswork: 5 performance indicators ensure visible results.</span></li>
+          <li class="hero-proof-item"><span class="trust-hook">4×A* | Imperial College Computing (AI) | Top 100 UK by CS A Level</span></li>
+        </ul>
         <div class="cta-ensemble">
           <div class="testimonial-cta">
             <figure class="hero-testimonial">
@@ -64,7 +68,7 @@
           <aside class="cta-offer" aria-label="Special offer details">
             <div class="cta-offer__body">
               <p class="cta-offer__eyebrow">SPECIAL OFFER – SAVE £50</p>
-              <p class="cta-offer__copy">Book your consult within 24hrs to get the £50 diagnostic for FREE. No credit card required.</p>
+              <p class="cta-offer__copy">Book your consult within 24hrs to get the <span class='text-mulberry'>£50 Diagnostic for Free.</span> No credit card required.</p>
             </div>
             <div class="cta-offer__timer" aria-hidden="true"></div>
           </aside>
@@ -102,7 +106,7 @@
       </div>
     </div>
 
-    <a class="scroll-cue" href="#proof-extra" aria-label="Scroll for more">
+    <a class="scroll-cue" href="#guarantee" aria-label="Scroll for more">
       <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path d="M6.7 9.3a1 1 0 0 1 1.4 0L12 13.2l3.9-3.9a1 1 0 1 1 1.4 1.4l-4.6 4.6a1 1 0 0 1-1.4 0L6.7 10.7a1 1 0 0 1 0-1.4z"/></svg>
     </a>
   </section>
@@ -110,16 +114,56 @@
   <div class="delimiter delimiter--hero" aria-hidden="true"></div>
 
   <main id="core-content">
-    <section id="proof-extra" class="section section-tight">
+    <section id="guarantee" class="section section-tight">
       <div class="container">
-        <p class="eyebrow">Proof</p>
-        <ul class="badge-row">
-          <li class="badge">BMO Round 1 Distinction</li>
-          <li class="badge">Winning Maths Talk at The Royal Institution</li>
-          <li class="badge">92% Physics A Level</li>
-          <li class="badge">Led Physics Olympiad Society</li>
-          <li class="badge">1.5+ years teaching</li>
-        </ul>
+        <h2><span class="text-mulberry">*</span>Guarantee</h2>
+      </div>
+    </section>
+
+    <div class="delimiter delimiter--section" aria-hidden="true"></div>
+
+    <section id="classic-story" class="section section-tight">
+      <div class="container">
+        <h2>C -> A in 8 Weeks</h2>
+        <article class="case-story">
+          <h3 class="case-story__section-title">April 2025</h3>
+          <p>A student and her parents came to us desperate..</p>
+          <div class="case-story__wrap" data-story-wrap>
+            <div class="case-story__collapse" id="classic-story-body">
+              <div class="case-story__section">
+                <blockquote class="quote-simple">
+                  <p>My heart sank. Spring mocks came back a <strong>C</strong>, but the offer demands an <strong>A</strong>! We tried tutor after tutor — no change.. I need someone to take charge, right away.</p>
+                  <p class="quote-simple__cite">— mum</p>
+                </blockquote>
+                <p>They decided to join <strong>The Academy</strong>.</p>
+                <p>The first sessions were heavy. Concepts felt slippery and exam timing was brutal. We began with a diagnostic to map strengths, gaps, and speed bottlenecks. Then we slowed the pace and rebuilt method by method: understanding first, execution second.</p>
+              </div>
+              <div class="case-story__section">
+                <h3 class="case-story__section-title">The Academy</h3>
+                <p>We established close communication with the student and her parents to support progress at every step. That included:</p>
+                <ul class="bullets">
+                  <li>offering bespoke home practice sets targeting her specific problems,</li>
+                  <li>providing extra support between lessons when homework became challenging,</li>
+                  <li>applying exam techniques used by top 1% students drilled into muscle memory,</li>
+                  <li>maintaining parent communication with <strong>under 15-minute</strong> DM response time, Monday to Sunday, day hours.</li>
+                </ul>
+                <p>These are standard CS Prime practices applied to every student, not experimental methods. And these are only a few examples of the full range of support and systems we offer.</p>
+              </div>
+              <div class="case-story__section">
+                <h3 class="case-story__section-title">The Finale</h3>
+                <p>After three weeks, the results started to show: <strong>+10%</strong> on the average score. Confidence followed. Answers became structured, timing steadier, corrections rarer.</p>
+                <p>We pushed into full papers, mixed-topic rotations, and calm repeatability. By week eight, timed scripts held at <strong>78%</strong>. June arrived. A-levels finished. The <strong>C</strong> became a <strong>strong A</strong>.</p>
+                <p>Parents had clarity. She had control. The dream university was back within reach.</p>
+                <p>Want the same for your child? <strong>Book Consult</strong>.</p>
+                <p>It takes little time, no commitment, and is free of charge — the first step towards bringing your child to their prime and learning how the Academy works. We will get a baseline, build the plan, and drive to A*.</p>
+                <p><em>P.S. This case shows only our well known methods (techniques include: tracing substitution, mid-code debugging, explicit data typing, ...). Our top 0.1% advantages are proprietary to CS Prime Academy and exclusive to clients. You cannot find them anywhere else.</em></p>
+              </div>
+            </div>
+            <button class="case-story__toggle" type="button" data-story-toggle aria-expanded="false" aria-controls="classic-story-body">
+              Read full story
+            </button>
+          </div>
+        </article>
       </div>
     </section>
 
