--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
         <h2 class="hero-title">The Breakthrough Programme<br>A Level Computer Science,<br>taught for <span class="u-underline">results</span>.</h2>
         <ul class="hero-proof-list">
           <li class="hero-proof-item">
-            <span class="hero-guarantee-banner">GUARANTEE +1 GRADE IN 3 MONTHS* <span class="hero-guarantee-banner__note">(never before)</span></span>
+            <span class="hero-guarantee-banner">ACHIEVE +1 GRADE IN 3 MONTHS TO WIN 100% MONEY BACK</span>
           </li>
           <li class="hero-proof-item"><span class="hero-sub">No guesswork: 5 performance indicators ensure visible results.</span></li>
-          <li class="hero-proof-item"><span class="trust-hook">4×A* | Imperial College Computing (AI) | Top 100 UK by CS A Level</span></li>
+          <li class="hero-proof-item"><span class="trust-hook">4×A* | Imperial College Computing (AI) |<br>Ranked Top 100 in the UK for CS A-Level</span></li>
         </ul>
         <div class="cta-ensemble">
           <div class="testimonial-cta">
             <figure class="hero-testimonial">
               <div class="hero-testimonial__header">
                 <img class="hero-testimonial__media" src="/assets/natalie-160.png" alt="Natalie — delighted parent" width="112" height="112" loading="lazy">
-                <p class="hero-testimonial__name">Natalie — envied by neighbours for son's results</p>
+                <p class="hero-testimonial__name">Natalie — a happy mum envied by neighbours for son's results</p>
               </div>
               <blockquote class="hero-testimonial__quote">“…My son easily understands and absorbs information thanks to Philipp’s ability to explain complex topics clearly.”</blockquote>
             </figure>
@@ -114,15 +114,18 @@
   <div class="delimiter delimiter--hero" aria-hidden="true"></div>
 
   <main id="core-content">
-    <section id="guarantee" class="section section-tight">
+    <section id="how-it-works" class="how-it-works" aria-labelledby="how-it-works-title">
       <div class="container">
-        <h2><span class="text-mulberry">*</span>Guarantee</h2>
+        <h2 id="how-it-works-title">How It Works</h2>
+        <div class="how-it-works__frame">
+          <img class="how-it-works__doodle" src="/assets/how-it-works.png" alt="How the CS Prime Academy programme works" loading="lazy">
+        </div>
       </div>
     </section>
 
     <div class="delimiter delimiter--section" aria-hidden="true"></div>
 
-    <section id="classic-story" class="section section-tight">
+    <section id="guarantee" class="section section-tight">
       <div class="container">
         <h2>C -> A in 8 Weeks</h2>
         <article class="case-story">
@@ -148,6 +151,31 @@
                   <li>maintaining parent communication with <strong>under 15-minute</strong> DM response time, Monday to Sunday, day hours.</li>
                 </ul>
                 <p>These are standard CS Prime practices applied to every student, not experimental methods. And these are only a few examples of the full range of support and systems we offer.</p>
+                <div class="case-story__carousel" data-carousel aria-roledescription="carousel">
+                  <button class="case-story__carousel-nav case-story__carousel-nav--prev" type="button" data-carousel-prev aria-label="Previous example">
+                    <span aria-hidden="true">‹</span>
+                  </button>
+                  <div class="case-story__carousel-viewport" tabindex="0" role="group" aria-live="polite">
+                    <ul class="case-story__carousel-track" data-carousel-track>
+                      <li class="case-story__carousel-slide is-active" data-carousel-slide>
+                        <img src="/assets/tutor-example1.png" alt="Tutor example 1 – personalised markup for a student" loading="lazy">
+                      </li>
+                      <li class="case-story__carousel-slide" data-carousel-slide>
+                        <img src="/assets/tutor-example2.png" alt="Tutor example 2 – annotated code corrections" loading="lazy">
+                      </li>
+                      <li class="case-story__carousel-slide" data-carousel-slide>
+                        <img src="/assets/tutor-example3.png" alt="Tutor example 3 – exam strategy board" loading="lazy">
+                      </li>
+                      <li class="case-story__carousel-slide" data-carousel-slide>
+                        <img src="/assets/tutor-example4.png" alt="Tutor example 4 – week-by-week tracker" loading="lazy">
+                      </li>
+                    </ul>
+                  </div>
+                  <button class="case-story__carousel-nav case-story__carousel-nav--next" type="button" data-carousel-next aria-label="Next example">
+                    <span aria-hidden="true">›</span>
+                  </button>
+                  <p class="case-story__carousel-caption">Here are the boards from the past lessons with the student.</p>
+                </div>
               </div>
               <div class="case-story__section">
                 <h3 class="case-story__section-title">The Finale</h3>
@@ -167,30 +195,9 @@
       </div>
     </section>
 
+
     <div class="delimiter delimiter--section" aria-hidden="true"></div>
 
-    <section id="case" class="section section-tight">
-      <div class="container">
-        <p class="eyebrow">Case study</p>
-        <div class="case-grid">
-          <div>
-            <p class="stat">98%</p>
-            <p class="note">Maths A Level</p>
-          </div>
-          <div>
-            <p class="kicker">Edexcel Y13 went from low B (november) to A* (June). Weekly tracker showed conversion rising from 62% to 91%.</p>
-            <ul class="kpi-grid" role="list">
-              <li>Timing</li>
-              <li>Accuracy</li>
-              <li>Conversion</li>
-              <li>Coverage</li>
-              <li>Focus</li>
-            </ul>
-            <p class="note">We teach to exam board spec line-by-line, with weekly notes to parents.</p>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <div class="delimiter delimiter--section" aria-hidden="true"></div>
 
@@ -207,10 +214,10 @@
                   <th scope="col" class="tracker-topic">Assessment</th>
                   <th scope="col" class="tracker-time">Allowed (min)</th>
                   <th scope="col" class="tracker-time">Actual (min)</th>
-                  <th scope="col" class="tracker-rowtype">Indicator</th>
+                  <th scope="col" class="tracker-rowtype">Parameter</th>
                   <th scope="col">Q1</th>
-                  <th scope="col">Q2</th>
-                  <th scope="col">Q3</th>
+                  <th scope="col">...</th>
+                  <th scope="col">Q10</th>
                   <th scope="col">Total</th>
                   <th scope="col">Attempted</th>
                   <th scope="col">Max</th>
@@ -224,7 +231,7 @@
               </thead>
               <tbody>
                 <tr>
-                  <th scope="rowgroup" rowspan="8" class="tracker-test">Maths Diagnostic -<br><span>24/09/2025</span></th>
+                  <th scope="rowgroup" rowspan="8" class="tracker-test">Diagnostic -<br><span>24/09/2025</span></th>
                   <td rowspan="8" class="tracker-time"><span>47</span></td>
                   <td rowspan="8" class="tracker-allowed"><span>40</span></td>
                   <th scope="row" class="tracker-rowtype">Marks</th>
